<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.BannerMessagePreference
        android:key="@string/sim_list_background_restricted_banner_key"
        android:title="@string/background_restricted_title"
        android:summary="@string/background_restricted_banner_content"
        app:isPreferenceVisible="false"/>

    <com.android.settingslib.widget.BannerMessagePreference
        android:key="@string/sim_list_disclaimer_banner_key"
        android:title="@string/disclaimer_banner_content"
        app:isPreferenceVisible="false"/>

    <PreferenceCategory
        android:key="@string/sim_list_key"
        android:title="@string/sim_list_title">

        <Preference
            android:key="@string/sim_list_no_sim_key"
            android:title="@string/sim_no_inserted_msg"
            android:enabled="false"
            app:isPreferenceVisible="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_category_title"
        app:allowDividerAbove="true">

        <Preference
            android:key="@string/sim_list_updates_key"
            android:title="@string/updates_title"
            android:summary="@string/updates_summary">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/releases_url"/>
        </Preference>

        <Preference
            android:key="@string/sim_list_version_key"
            android:title="@string/build_version_title"
            android:enabled="false"/>

        <Preference
            android:key="@string/sim_list_help_key"
            android:title="@string/help_title"
            android:summary="@string/help_summary">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/help_url"/>
        </Preference>

        <Preference
            android:key="@string/sim_list_license_key"
            android:title="@string/license_title"
            android:summary="@string/license_summary">
            <intent android:targetPackage="com.github.iusmac.sevensim"
                    android:targetClass="com.github.iusmac.sevensim.ui.license.LicenseActivity"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
