<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.


  GNU GENERAL PUBLIC LICENSE
  Version 3, 29 June 2007
 
  Copyright (C) 2024 Iusico Maxim <iusico.maxim@libero.it>
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScheduleCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/schedule_card_elevation"
    android:background="@drawable/schedule_card_expanded_background"
    android:foreground="@drawable/schedule_card_ripple_background"
    android:importantForAccessibility="no">

    <include layout="@layout/centered_guidelines" />

    <TextView
        android:id="@+id/edit_label"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min_size"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="@dimen/schedule_horizontal_padding"
        android:focusable="true"
        android:gravity="start|center"
        android:hint="@string/scheduler_name_hint"
        android:paddingStart="4.0dip"
        android:paddingEnd="4.0dip"
        android:textAlignment="viewStart"
        android:textAppearance="@style/ScheduleCardTextStyle"
        android:drawableStart="@drawable/ic_label"
        app:layout_constraintEnd_toStartOf="@id/end_guide_thin"
        app:layout_constraintStart_toEndOf="@id/start_guide_thin"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <include
        layout="@layout/schedule_time_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/end_guide_thin"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/start_guide_thin"
        app:layout_constraintTop_toBottomOf="@id/edit_label" />

    <Switch
        android:id="@+id/onoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:minWidth="@dimen/touch_target_min_size"
        android:minHeight="@dimen/touch_target_min_size"
        app:layout_constraintEnd_toStartOf="@id/end_guide_thin"
        app:layout_constraintTop_toBottomOf="@id/edit_label"
        app:layout_constraintBottom_toTopOf="@id/repeat_days"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <include
        android:id="@+id/repeat_days"
        layout="@layout/days_of_week"
        android:layout_width="0.0dip"
        android:layout_height="@dimen/touch_target_min_size"
        android:layout_marginHorizontal="4.0dip"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@id/end_guide_very_thin"
        app:layout_constraintStart_toEndOf="@id/start_guide_very_thin"
        app:layout_constraintTop_toBottomOf="@id/digital_clock"/>

    <LinearLayout
        android:id="@+id/action_summary_container"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touch_target_min_size"
        android:background="?android:attr/selectableItemBackground"
        android:paddingStart="4.0dip"
        android:paddingEnd="4.0dip"
        app:layout_constraintEnd_toStartOf="@id/end_guide_thin"
        app:layout_constraintStart_toEndOf="@id/start_guide_thin"
        app:layout_constraintTop_toBottomOf="@id/repeat_days">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:focusable="false"
            android:clickable="false"
            android:gravity="center"
            android:src="@drawable/ic_tasks_24dp"
            tools:ignore="UseAppTint" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/schedule_horizontal_padding"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/scheduler_action_title"
                android:textAlignment="viewStart"
                android:textAppearance="@style/ScheduleCardTextStyle" />

            <TextView
                android:id="@+id/action_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:alpha="0.69"
                android:textAlignment="viewStart"
                android:textAppearance="@style/ScheduleCardTextStyle"
                android:fontFamily="sans-serif" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_container"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:paddingStart="4.0dip"
        android:paddingEnd="4.0dip"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/arrow_container"
        app:layout_constraintStart_toEndOf="@id/start_guide_thin"
        app:layout_constraintTop_toBottomOf="@id/action_summary_container">

        <Button
            android:id="@+id/delete"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/touch_target_min_size"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_delete_small"
            android:drawablePadding="@dimen/schedule_horizontal_padding"
            android:focusable="true"
            android:gravity="start|center"
            android:text="@string/scheduler_delete"
            android:textAllCaps="false"
            android:textAppearance="@style/ScheduleCardTextStyle" />

        <LinearLayout
            android:id="@+id/delete_confirm_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min_size"
                android:drawablePadding="@dimen/schedule_horizontal_padding"
                android:focusable="false"
                android:gravity="start|center"
                android:text="@string/scheduler_delete_message"
                android:textAppearance="@style/ScheduleCardTextStyle"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:drawableStart="@drawable/ic_delete_small"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/hairline_height"
                android:layout_marginTop="8dp"
                android:alpha="0.15"
                android:background="?android:attr/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/cancel"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target_min_size"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:text="@android:string/cancel"
                    android:textAllCaps="false"
                    android:textAppearance="@style/ScheduleCardTextStyle" />

                <Button
                    android:id="@+id/ok"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target_min_size"
                    android:background="?android:attr/selectableItemBackground"
                    android:focusable="true"
                    android:text="@android:string/ok"
                    android:textAllCaps="false"
                    android:textAppearance="@style/ScheduleCardTextStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/arrow_container"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_target_min_size"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:tooltipText="@string/scheduler_collapse"
        android:padding="@dimen/schedule_start_padding"
        app:layout_constraintEnd_toStartOf="@id/end_guide_extreme_thin"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/scheduler_collapse"
            android:rotation="180"
            android:focusable="false"
            android:clickable="false"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_pointing_down" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
